# gutenberg

./: .dockerignore  .editorconfig  .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  index.php  manage.py  package.json  print-color.php  print.php  pyproject.toml  requirements.txt  sandbox.sh  vue.config.js
.github/: workflows
api/: exceptions.py  serializers.py  urls.py  views.py
backend/: .coverage  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  pytest.toml  requirements.txt  sandbox.sh
backend/api/: exceptions.py  serializers.py  urls.py  views.py
backend/common/: models.py  views.py
backend/common/img/: logo60.xcf
backend/common/migrations/: 0002_auto_20201030_2137.py  0003_user_api_key.py
backend/common/templates/rest_framework/: login.html
backend/control/: admin.py  forms.py  models.py  widgets.py
backend/control/migrations/: 0003_auto_20201230_0014.py  0004_auto_20201230_2118.py  0005_localprinterparams_cups_printer_name.py  0007_auto_20210205_2220.py  0011_alter_jobartefact_artefact_type_and_more.py  0012_printingproperties_fit_to_page.py  0013_jobartefact_document_number.py  0013_printingproperties_n_up.py  0014_gutenbergjob_next_document_number.py  0014_printingproperties_imposition_template.py  0015_printingproperties_orientation_requested.py  0016_gutenbergjob_next_document_number_and_more.py
backend/control/static/css/: cups_printer_name_autocomplete.css
backend/control/static/js/: cups_printer_name_autocomplete.js
backend/control/templates/widgets/: cups_printer_name_autocomplete.html
backend/django_ksi_auth/: README.md  _common.py  _consts.py  _user_sessions.py  apps.py  auth_backend.py  backends.py  client.py  consts.py  decorators.py  middleware.py  urls.py  user_sessions.py  utils.py  views.py
backend/gutenberg/: auth.py  celery.py  urls.py  views.py  worker_capabilities.py  wsgi.py
backend/gutenberg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/gutenberg/settings/: base.py  docker_base.py  docker_base_settings.py  docker_server_overrides.py  docker_settings.py.example  local_settings.py.example  production_settings.py.example  test_settings.py
backend/ipp/: apps.py  proto.py  proto_operations.py  service.py  urls.py  views.py
backend/ipp/tests/: test_fields.py  test_service.py  utils.py
backend/printing/: apps.py  backends.py  converter.py  postprocess.py  printing.py  tasks.py  urls.py  utils.py  views.py
backend/printing/processing/: converter.py  final_pages.py  imposition.py  imposition_templates.py  pages.py
backend/printing/processing/tests/: pages.py
backend/printing/tests/: .coverage  comftest.py  pytest.ini
backend/printing/tests/printing/processing/: test_converter.py  test_final_pages.py  test_imposition.py  test_pages.py
common/: admin.py  apps.py  models.py  renderers.py  signals.py
control/: admin.py  models.py
cups/: cupsd.conf  docker-entrypoint.sh
docs/: api-ipp.md  book.toml
gutenberg/: auth.py  celery.py  urls.py
img/: logo.xcf
(+144 files in other folders)
