[project]
name = "gutenberg"
version = "4.0.0-rc2"
description = "Office printer gateway: print documents via web GUI or driverless IPP"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "pypdf",
    "python-magic>=0.4.27",
    "redis>=6.4.0", # TODO: Update
    "ksi-oidc-django>=1.0.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.12",
]

[tool.uv.sources]
ksi-oidc-django = { git = "https://github.com/KSIUJ/ksi-oidc-python", subdirectory="django", tag="django-v1.0.0" }
# Use pypdf from pip after https://github.com/py-pdf/pypdf/issues/3487 is resolved.
# Versions from v5.5.0 have a regression bug described in the issue.
pypdf = { git = "https://github.com/Nid01/pypdf", rev="fc01c9a8ead74c6d1646ac0086aece8ed485d683" }
