[project]
name = "gutenberg"
version = "4.0.0-rc3"
description = "Office printer gateway: print documents via web GUI or driverless IPP"
requires-python = "~=3.13.0"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "pypdf>=6.1.3",
    "python-magic>=0.4.27",
    "redis>=7.0.1",
    "ksi-oidc-django>=1.0.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[tool.uv.sources]
ksi-oidc-django = { git = "https://github.com/KSIUJ/ksi-oidc-python", subdirectory="django", tag="django-v1.0.0" }
# Use pypdf from pip after https://github.com/py-pdf/pypdf/issues/3487 is resolved.
# Versions from v5.5.0 have a regression bug described in the issue.
